# AgentLang

./: .gitignore  Cargo.toml  IMPLEMENTATION_ROADMAP.md  ISSUE_TEMPLATE.md  Makefile  README.md  SECURITY_AUDIT.md  SPEC.md  ZKP_ROADMAP.md  agent.id  agent.key  audit.json  build.rs  clippy-fix.py  memory.json
.forge/: FORGE_PR_DESCRIPTION.md
.github/workflows/: ci.yml  coverage.yml
docs/zkp/: 01-per-statement-airs.md  02-sha256-in-air.md  03-zkvm-migration.md  STATUS.md  phase3-implementation-plan.md
examples/: demo.agentlang
proto/: agent.proto  registry.proto
prototypes/lookup-bench/: Cargo.toml  README.md
prototypes/lookup-bench/src/: plonky3_lookup.rs  winterfell_aux_lookup.rs  winterfell_lookup.rs
src/: ast.rs  crypto.rs  lib.rs  main.rs  parser.rs  runtime.rs  tls.rs
src/runtime/: audit.rs  call.rs  context.rs  eval.rs  exec_log.rs  goal.rs  mcp.rs  memory.rs  memory_commit.rs  mod.rs  secret.rs
tests/: e2e_call_args.rs  e2e_cli.rs  e2e_contract_enforcement.rs  e2e_demo.rs  e2e_memory_persistence.rs  e2e_parse_corpus.rs  e2e_proof.rs
tests/common/: mod.rs
tests/fixtures/: basic_memory.agentlang  control_flow.agentlang  events.agentlang  goals_and_tools.agentlang  parallel_gather.agentlang  proof.agentlang
wasm_modules/: math_tool.wasm  string_tool.wasm
