[package]
name = "AgentLang"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-recursion = "1.1.1"
bastion = { version = "0.4.5", features = ["tokio-runtime"] }
ed25519-dalek = "2.1"
hex = "0.4.3"
nom = "8.0.0"
prost = "0.14.3"
prost-types = "0.14.3"
rand = "0.8"
rand_core = "0.10.0"
ring = { version = "0.17.14", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
wasmtime = "43.0.0"
winterfell = "0.13.1"

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"
